prueba multiples tabs

--- a/src/co/edu/uniquindio/marketplace/view/MarketplaceView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/MarketplaceView.fxml
@@ -19,118 +19,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="561.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.MarketplaceViewController">
    <children>
-      <TabPane prefHeight="559.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tabPane" id="tabPane" prefHeight="559.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab text="Vendedor 1">
-               <content>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                     <children>
-                        <SplitPane dividerPositions="0.49911504424778763" orientation="VERTICAL" prefHeight="567.0" prefWidth="800.0">
-                          <items>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="72.0" prefWidth="798.0">
-                                 <children>
-                                    <ScrollPane prefHeight="296.0" prefWidth="800.0">
-                                       <content>
-                                          <AnchorPane prefHeight="447.0" prefWidth="797.0">
-                                             <children>
-                                                <Circle fx:id="circleImagenPerfil" fill="#eceff2" layoutX="82.0" layoutY="88.0" radius="46.0" stroke="BLACK" strokeType="INSIDE" />
-                                                <TextArea fx:id="txtAreaComentarios" layoutX="448.0" layoutY="42.0" prefHeight="129.0" prefWidth="276.0" />
-                                                <Label layoutX="448.0" layoutY="14.0" text="Comentarios:" />
-                                                <TableView fx:id="tableAsociados" layoutX="27.0" layoutY="236.0" prefHeight="162.0" prefWidth="220.0">
-                                                  <columns>
-                                                    <TableColumn prefWidth="106.0" text="Nombre(s)" />
-                                                      <TableColumn prefWidth="113.0" text="Apellidos" />
-                                                  </columns>
-                                                </TableView>
-                                                <TableView fx:id="tableSolicitudes" layoutX="289.0" layoutY="236.0" prefHeight="162.0" prefWidth="220.0">
-                                                   <columns>
-                                                      <TableColumn prefWidth="106.0" text="Nombre(s)" />
-                                                      <TableColumn prefWidth="113.0" text="Dirección" />
-                                                   </columns>
-                                                </TableView>
-                                                <Separator layoutX="-1.0" layoutY="179.0" prefHeight="4.0" prefWidth="800.0" />
-                                                <TableView fx:id="tableNoAsociados" layoutX="553.0" layoutY="236.0" prefHeight="162.0" prefWidth="220.0">
-                                                   <columns>
-                                                      <TableColumn prefWidth="100.0" text="Nombre(s)" />
-                                                      <TableColumn prefWidth="119.0" text="Apellido(s)" />
-                                                   </columns>
-                                                </TableView>
-                                                <Button fx:id="btnAceptarSolicitud" layoutX="307.0" layoutY="408.0" mnemonicParsing="false" onAction="#aceptarSolicitudAction" text="Aceptar" />
-                                                <Button fx:id="btnRechazarSolicitud" layoutX="422.0" layoutY="408.0" mnemonicParsing="false" onAction="#rechazarSolicitudAction" text="Rechazar" />
-                                                <Button fx:id="btnEnviarSolicitud" layoutX="615.0" layoutY="408.0" mnemonicParsing="false" text="Enviar solicitud" />
-                                                <Label layoutX="553.0" layoutY="192.0" text="Buscar:" />
-                                                <TextField fx:id="txtBuscarVendedores" layoutX="605.0" layoutY="188.0" />
-                                                <Separator layoutX="265.0" layoutY="181.0" orientation="VERTICAL" prefHeight="267.0" prefWidth="6.0" />
-                                                <Separator layoutX="525.0" layoutY="181.0" orientation="VERTICAL" prefHeight="267.0" prefWidth="6.0" />
-                                                <Label layoutX="61.0" layoutY="14.0" text="######" />
-                                                <Label layoutX="35.0" layoutY="216.0" text="Tabla de vendedores asociados:" />
-                                                <Label layoutX="289.0" layoutY="216.0" text="Solicitudes de vendedores asociados:" />
-                                                <Label layoutX="553.0" layoutY="216.0" text="Lista de vendedores no asociados" />
-                                                <Button fx:id="btnFotoPerfil" layoutX="16.0" layoutY="146.0" mnemonicParsing="false" onAction="#cambiarImagenPerfilAction" text="Cambiar foto de perfil" />
-                                                <Label layoutX="27.0" layoutY="184.0" text="Contactos:" />
-                                                <Separator layoutX="26.0" layoutY="200.0" prefHeight="1.0" prefWidth="56.0" />
-                                             </children>
-                                          </AnchorPane>
-                                       </content>
-                                    </ScrollPane>
-                                 </children>
-                              </AnchorPane>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="349.0" prefWidth="798.0">
-                                 <children>
-                                    <ScrollPane prefHeight="246.0" prefWidth="800.0">
-                                       <content>
-                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="412.0" prefWidth="790.0">
-                                             <children>
-                                                <VBox layoutX="130.0" layoutY="78.0" prefHeight="238.0" prefWidth="176.0" spacing="6.0">
-                                                   <children>
-                                                      <TextField fx:id="txtNombreProducto" />
-                                                      <TextField fx:id="txtCategoriaProducto" layoutX="10.0" layoutY="60.0" />
-                                                      <TextField fx:id="txtPrecioProducto" layoutX="10.0" layoutY="85.0" prefHeight="19.0" prefWidth="176.0" />
-                                                      <ComboBox fx:id="cbEstadoProducto" prefHeight="25.0" prefWidth="180.0" />
-                                                      <ImageView fx:id="ivImagenProducto" fitHeight="77.0" fitWidth="149.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <Button fx:id="btnSeleccionarImagen" mnemonicParsing="false" onAction="#seleccionarImagenAction" text="Seleccionar imagen:" />
-                                                   </children>
-                                                </VBox>
-                                                <VBox layoutX="22.0" layoutY="78.0" prefHeight="184.0" prefWidth="82.0" spacing="15.0">
-                                                   <children>
-                                                      <Label text="Nombre:" />
-                                                      <Label text="Categoría:" />
-                                                      <Label text="Precio:" />
-                                                      <Label text="Estado:" />
-                                                      <Label layoutX="10.0" layoutY="170.0" text="Imagen:" />
-                                                   </children>
-                                                </VBox>
-                                                <Button fx:id="btnAddProducto" layoutX="185.0" layoutY="359.0" mnemonicParsing="false" onAction="#addProductoAction" text="Añadir producto" />
-                                                <Button fx:id="btnActualizarProducto" layoutX="361.0" layoutY="359.0" mnemonicParsing="false" onAction="#actualizarProductoAction" text="Actualizar producto" />
-                                                <Button fx:id="btnEliminarProducto" layoutX="534.0" layoutY="285.0" mnemonicParsing="false" onAction="#eliminarProductoAction" text="Eliminar producto" />
-                                                <Separator layoutX="-2.0" layoutY="323.0" prefHeight="2.0" prefWidth="791.0" />
-                                                <TableView fx:id="tableProductos" layoutX="380.0" layoutY="94.0" prefHeight="176.0" prefWidth="390.0">
-                                                   <columns>
-                                                      <TableColumn fx:id="clNombreProducto" prefWidth="111.0" text="Nombre" />
-                                                      <TableColumn fx:id="clCategoriaProducto" prefWidth="103.0" text="Categoría" />
-                                                      <TableColumn fx:id="clPrecioProducto" prefWidth="76.0" text="Precio" />
-                                                      <TableColumn fx:id="clEstadoProducto" prefWidth="99.0" text="Estado" />
-                                                   </columns>
-                                                </TableView>
-                                                <Label layoutX="551.0" layoutY="62.0" text="Buscar:" />
-                                                <Separator layoutX="1.0" layoutY="35.0" prefHeight="1.0" prefWidth="800.0" />
-                                                <TextField fx:id="txtBuscarProducto" layoutX="606.0" layoutY="58.0" />
-                                                <Label layoutX="380.0" layoutY="71.0" text="Tabla de productos" />
-                                                <Button fx:id="btnNuevoProducto" layoutX="555.0" layoutY="359.0" mnemonicParsing="false" onAction="#nuevoProductoAction" text="Nuevo Producto" />
-                                                <Label layoutX="22.0" layoutY="14.0" text="Gestión de producto:" />
-                                                <Separator layoutX="341.0" layoutY="37.0" orientation="VERTICAL" prefHeight="286.0" prefWidth="4.0" />
-                                             </children>
-                                          </AnchorPane>
-                                       </content>
-                                    </ScrollPane>
-                                 </children>
-                              </AnchorPane>
-                          </items>
-                        </SplitPane>
-                     </children>
-                  </AnchorPane>
-               </content>
-          </Tab>
+
         </tabs>
       </TabPane>
    </children>
