--- a/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="561.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.MarketplaceViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="561.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.ConfiViewController">
    <children>
       <TabPane fx:id="tabPane" id="tabPane" prefHeight="559.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
