--- a/src/co/edu/uniquindio/marketplace/view/VendedorView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/VendedorView.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.VendedorController">
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.VendedorViewController">
     <children>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                     <children>
