--- a/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
@@ -17,27 +17,30 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="561.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.ConfiViewController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="726.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.ConfiViewController">
    <children>
-      <TabPane fx:id="tabPane" id="tabPane" prefHeight="559.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane id="tabPane" fx:id="tabPane" prefHeight="726.0" prefWidth="1366.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
          <Tab text="Confi.">
             <content>
-              <AnchorPane fx:id="main" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+              <AnchorPane fx:id="main" minHeight="0.0" minWidth="0.0" prefHeight="726.0" prefWidth="1366.0">
                    <children>
-                      <Label layoutX="30.0" layoutY="28.0" text="Datos de vendedor:" />
-                      <TextField fx:id="txtNombreVendedor" layoutX="134.0" layoutY="232.0" prefHeight="25.0" prefWidth="200.0" />
-                      <Label layoutX="431.0" layoutY="236.0" text="Apellido(s):" />
-                      <Label layoutX="45.0" layoutY="236.0" text="Nombre(s):" />
-                      <TextField fx:id="txtApellidoVendedor" layoutX="533.0" layoutY="232.0" prefHeight="25.0" prefWidth="200.0" />
-                      <Label layoutX="43.0" layoutY="294.0" text="Cédula:" />
-                      <TextField fx:id="txtCedulaVendedor" layoutX="134.0" layoutY="290.0" prefHeight="25.0" prefWidth="200.0" />
-                      <TextField fx:id="txtDireccionVendedor" layoutX="533.0" layoutY="290.0" prefHeight="25.0" prefWidth="200.0" />
-                      <Label layoutX="434.0" layoutY="294.0" text="Dirección:" />
+                      <Label layoutX="30.0" layoutY="28.0" text="Datos de vendedor:">
+                           <font>
+                              <Font name="System Bold Italic" size="14.0" />
+                           </font></Label>
+                      <TextField fx:id="txtNombreVendedor" layoutX="399.0" layoutY="310.0" prefHeight="25.0" prefWidth="200.0" />
+                      <Label layoutX="696.0" layoutY="314.0" text="Apellido(s):" />
+                      <Label layoutX="310.0" layoutY="314.0" text="Nombre(s):" />
+                      <TextField fx:id="txtApellidoVendedor" layoutX="798.0" layoutY="310.0" prefHeight="25.0" prefWidth="200.0" />
+                      <Label layoutX="308.0" layoutY="372.0" text="Cédula:" />
+                      <TextField fx:id="txtCedulaVendedor" layoutX="399.0" layoutY="368.0" prefHeight="25.0" prefWidth="200.0" />
+                      <TextField fx:id="txtDireccionVendedor" layoutX="798.0" layoutY="368.0" prefHeight="25.0" prefWidth="200.0" />
+                      <Label layoutX="699.0" layoutY="372.0" text="Dirección:" />
                       <Separator layoutX="1.0" layoutY="44.0" prefHeight="4.0" prefWidth="800.0" />
-                      <Circle fx:id="circleImagenPerfilInicio" fill="#eceff2" layoutX="403.0" layoutY="108.0" radius="46.0" stroke="BLACK" strokeType="INSIDE" />
-                      <Button fx:id="btnInsertarFotoPerfil" layoutX="340.0" layoutY="174.0" mnemonicParsing="false" onAction="#insertarFotoPerfilAction" text="Insertar foto de perfil" />
-                      <Button fx:id="btnCrearVendedor" layoutX="351.0" layoutY="407.0" mnemonicParsing="false" onAction="#crearVendedorAction" text="Añadir Vendedor" />
+                      <Circle fx:id="circleImagenPerfilInicio" fill="#eceff2" layoutX="670.0" layoutY="130.0" radius="46.0" stroke="BLACK" strokeType="INSIDE" />
+                      <Button fx:id="btnInsertarFotoPerfil" layoutX="606.0" layoutY="218.0" mnemonicParsing="false" onAction="#insertarFotoPerfilAction" text="Insertar foto de perfil" />
+                      <Button fx:id="btnCrearVendedor" layoutX="616.0" layoutY="485.0" mnemonicParsing="false" onAction="#crearVendedorAction" text="Añadir Vendedor" />
                    </children>
                 </AnchorPane>
             </content>
