--- a/src/co/edu/uniquindio/marketplace/view/LoginView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/LoginView.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -15,38 +10,35 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #E3FEFD;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.LoginViewController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1368.0" style="-fx-background-radius: 30;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.marketplace.controllers.LoginViewController">
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #79F1EC;" BorderPane.alignment="CENTER">
-         <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="13.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true" />
-            <Label layoutX="41.0" layoutY="88.0" text="MARKETPLACE">
-               <font>
-                  <Font name="System Bold" size="18.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
+      <AnchorPane prefHeight="700.0" prefWidth="478.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER" />
    </left>
-   <right>
-      <AnchorPane prefHeight="400.0" prefWidth="430.0" BorderPane.alignment="CENTER">
+   <center>
+      <AnchorPane prefHeight="700.0" prefWidth="440.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="56.0" fitWidth="59.0" layoutX="164.0" layoutY="26.0" />
-            <Label layoutX="155.0" layoutY="122.0" text="Usuario">
+            <Label layoutX="167.0" layoutY="235.0" text="Usuario">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <Label layoutX="138.0" layoutY="221.0" text="Contraseña">
+            <Label layoutX="150.0" layoutY="323.0" text="Contraseña">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
             </Label>
-            <TextField layoutX="120.0" layoutY="259.0" promptText="Ingrese usuario" />
-            <PasswordField fx:id="txtContrasenaLogin" layoutX="120.0" layoutY="259.0" promptText="Ingrese contraseña" />
-            <TextField fx:id="txtUsuarioLogin" layoutX="120.0" layoutY="175.0" promptText="Ingrese usuario" />
-            <Button fx:id="btnIngresarLogin" layoutX="165.0" layoutY="319.0" mnemonicParsing="false" onAction="#userLoginAction" text="Ingresar" />
+            <PasswordField fx:id="txtContrasenaLogin" layoutX="132.0" layoutY="371.0" promptText="Ingrese contraseña" style="-fx-background-radius: 30;" />
+            <TextField fx:id="txtUsuarioLogin" layoutX="132.0" layoutY="288.0" promptText="Ingrese usuario" style="-fx-background-radius: 30;" />
+            <Button fx:id="btnIngresarLogin" layoutX="132.0" layoutY="426.0" mnemonicParsing="false" onAction="#userLoginAction" prefHeight="25.0" prefWidth="149.0" style="-fx-background-radius: 30; -fx-background-color: #1493DB;" text="Ingresar" />
             <Label fx:id="LblError" layoutX="177.0" layoutY="95.0" />
+            <ImageView fitHeight="89.0" fitWidth="91.0" layoutX="158.0" layoutY="133.0">
+               <image>
+                  <Image url="@../../../../../../../../../Downloads/PinClipart.com_male-clipart_1332472.png" />
+               </image>
+            </ImageView>
          </children></AnchorPane>
+   </center>
+   <right>
+      <AnchorPane prefHeight="700.0" prefWidth="478.0" style="-fx-background-color: #FFFFFF;" BorderPane.alignment="CENTER" />
    </right>
 </BorderPane>
