--- a/src/co/edu/uniquindio/marketplace/view/VendedorView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/VendedorView.fxml
@@ -37,21 +37,22 @@
                                         <TableColumn fx:id="clApellidoVendedorAsociado" prefWidth="133.0" text="Apellidos" />
                                     </columns>
                                 </TableView>
-                                <TableView fx:id="tableSolicitudes" layoutX="698.0" layoutY="118.0" prefHeight="162.0" prefWidth="250.0">
+                                <TableView fx:id="tableSolicitudes" layoutX="647.0" layoutY="114.0" prefHeight="162.0" prefWidth="250.0">
                                     <columns>
                                         <TableColumn fx:id="clNombreSolicitud" prefWidth="119.0" text="Nombre(s)" />
                                         <TableColumn fx:id="clDireccionSolicitud" prefWidth="130.0" text="Dirección" />
                                     </columns>
                                 </TableView>
-                                <TableView fx:id="tableNoAsociados" layoutX="1064.0" layoutY="118.0" prefHeight="162.0" prefWidth="250.0">
+                                <TableView fx:id="tableNoAsociados" layoutX="954.0" layoutY="118.0" prefHeight="162.0" prefWidth="360.0">
                                     <columns>
                                         <TableColumn fx:id="clNombreVendedor" prefWidth="116.0" text="Nombre(s)" />
                                         <TableColumn fx:id="clApellidoVendedor" prefWidth="133.0" text="Apellido(s)" />
+                  <TableColumn fx:id="clSolicitudEnviada" prefWidth="110.0" text="Solicitud enviada" />
                                     </columns>
                                 </TableView>
-                                <Button fx:id="btnAceptarSolicitud" layoutX="730.0" layoutY="288.0" mnemonicParsing="false" onAction="#aceptarSolicitudAction" text="Aceptar" />
-                                <Button fx:id="btnRechazarSolicitud" layoutX="857.0" layoutY="288.0" mnemonicParsing="false" onAction="#rechazarSolicitudAction" text="Rechazar" />
-                                <Button fx:id="btnEnviarSolicitud" layoutX="1126.0" layoutY="288.0" mnemonicParsing="false" onAction="#enviarSolicitudAction" text="Enviar solicitud" />
+                                <Button fx:id="btnAceptarSolicitud" layoutX="679.0" layoutY="284.0" mnemonicParsing="false" onAction="#aceptarSolicitudAction" text="Aceptar" />
+                                <Button fx:id="btnRechazarSolicitud" layoutX="806.0" layoutY="284.0" mnemonicParsing="false" onAction="#rechazarSolicitudAction" text="Rechazar" />
+                                <Button fx:id="btnEnviarSolicitud" layoutX="1078.0" layoutY="284.0" mnemonicParsing="false" onAction="#enviarSolicitudAction" text="Enviar solicitud" />
                                 <Label layoutX="1126.0" layoutY="66.0" text="Buscar:" />
                                 <TextField fx:id="txtBuscarVendedores" layoutX="1179.0" layoutY="62.0" prefHeight="25.0" prefWidth="135.0" />
                                 <Label fx:id="lblNombreVendedor" layoutX="89.0" layoutY="14.0" text="######">
@@ -60,8 +61,8 @@
                </font>
             </Label>
                                 <Label layoutX="327.0" layoutY="90.0" text="Tabla de vendedores asociados:" />
-                                <Label layoutX="698.0" layoutY="98.0" text="Solicitudes de vendedores:" />
-                                <Label layoutX="1064.0" layoutY="98.0" text="Lista de vendedores no asociados" />
+                                <Label layoutX="647.0" layoutY="94.0" text="Solicitudes de vendedores:" />
+                                <Label layoutX="954.0" layoutY="99.0" text="Lista de vendedores no asociados" />
                                 <Button fx:id="btnFotoPerfil" layoutX="86.0" layoutY="150.0" mnemonicParsing="false" onAction="#cambiarImagenPerfilAction" text="Cambiar foto de perfil" />
                                 <Label layoutX="316.0" layoutY="36.0" text="Contactos:">
                <font>
