--- a/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
@@ -49,6 +49,54 @@
                 </AnchorPane>
             </content>
           </Tab>
+            <Tab text="Estadísticas">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="829.0" layoutY="116.0" text="Cantidad de productos publicados por fecha:">
+                           <font>
+                              <Font name="System Bold Italic" size="14.0" />
+                           </font>
+                        </Label>
+                        <Separator layoutX="-5.0" layoutY="48.0" prefHeight="3.0" prefWidth="1363.0" />
+                        <Label layoutX="45.0" layoutY="28.0" text="Tablero de control con indicadores y estadísticas" />
+                        <DatePicker layoutX="829.0" layoutY="191.0" />
+                        <Label layoutX="834.0" layoutY="159.0" text="Fecha de inicio:" />
+                        <DatePicker layoutX="1058.0" layoutY="191.0" />
+                        <Label layoutX="1058.0" layoutY="159.0" text="Fecha final:" />
+                        <Label layoutX="136.0" layoutY="110.0" text="Estadisticas de vendedor">
+                           <font>
+                              <Font name="System Bold Italic" size="14.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="829.0" layoutY="244.0" text="Cantidad de productos publicados:" />
+                        <TextField fx:id="txtCantidadProductosPublicadosFecha" editable="false" layoutX="1055.0" layoutY="240.0" prefHeight="25.0" prefWidth="90.0" />
+                        <Separator layoutX="680.0" layoutY="50.0" orientation="VERTICAL" prefHeight="289.0" prefWidth="5.0" />
+                        <Label layoutX="136.0" layoutY="157.0" text="Ingrese el usuario del vendedor:" />
+                        <TextField fx:id="txtUsuarioVendedorEstadistica" layoutX="373.0" layoutY="155.0" />
+                        <TextField fx:id="txtCantidadProductosPublicados" editable="false" layoutX="373.0" layoutY="191.0" prefHeight="25.0" prefWidth="90.0" />
+                        <Label layoutX="139.0" layoutY="195.0" text="Cantidad de productos publicados:" />
+                        <Label layoutX="139.0" layoutY="231.0" text="Cantidad de contactos:" />
+                        <TextField fx:id="txtCantidadContactos" editable="false" layoutX="373.0" layoutY="227.0" prefHeight="25.0" prefWidth="90.0" />
+                        <Separator layoutX="132.0" layoutY="126.0" prefHeight="3.0" prefWidth="143.0" />
+                        <Separator layoutX="-2.0" layoutY="338.0" prefHeight="7.0" prefWidth="1366.0" />
+                        <Separator layoutX="830.0" layoutY="135.0" prefHeight="3.0" prefWidth="295.0" />
+                        <TableView fx:id="tableTopProductos" layoutX="503.0" layoutY="399.0" prefHeight="229.0" prefWidth="367.0">
+                          <columns>
+                            <TableColumn fx:id="columnTop" editable="false" prefWidth="75.0" text="Top" />
+                            <TableColumn fx:id="columnProducto" editable="false" prefWidth="291.0" text="Producto" />
+                          </columns>
+                        </TableView>
+                        <Label layoutX="560.0" layoutY="361.0" text="Top 10 de productos mas vendidos:">
+                           <font>
+                              <Font name="System Bold Italic" size="14.0" />
+                           </font>
+                        </Label>
+                        <Separator layoutX="560.0" layoutY="380.0" prefHeight="3.0" prefWidth="233.0" />
+                     </children>
+                  </AnchorPane>
+              </content>
+            </Tab>
         </tabs>
       </TabPane>
    </children>
