--- a/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
+++ b/src/co/edu/uniquindio/marketplace/view/ConfiView.fxml
@@ -93,6 +93,7 @@
                            </font>
                         </Label>
                         <Separator layoutX="560.0" layoutY="380.0" prefHeight="3.0" prefWidth="233.0" />
+                        <Button fx:id="btnConsultarDatos" layoutX="276.0" layoutY="283.0" mnemonicParsing="false" onAction="#consultarDatosAction" text="Consultar" />
                      </children>
                   </AnchorPane>
               </content>
